--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
-    <link rel="stylesheet" href="./../src/app.css">
-    <link rel="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <div class="App">
@@ -28,6 +28,6 @@
             </div>
         </div>
     </div>
-    <script src="./../src/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
